Historical employment: slightly optimize rendering performance, removing some dead code Mortgage application: fix application not saving after adding co-applicant Co-applicants: fix boxes not aligned with primary applicant

--- a/app/styles/components/applicant-card.styl
+++ b/app/styles/components/applicant-card.styl
@@ -45,6 +45,7 @@ $applicantCardMaxWidth ?= 40em
 			.applicant-card-header
 				background #2BE289
 			transform scale(0.9)
+			transform-origin 0 0
 			&:before
 				transition transform 0.4s ease, opacity 0.4s ease
 				background url($icon-link)
